@@ -1,5 +1,8 @@
 2012-07-30  Doug Evans  <dje@google.com>
 
+	* gdb.dwarf2/fission-reread.S: Use .data instead of .bss.
+	* gdb.dwarf2/pr13961.S: Ditto.
+
 	* gdb.dwarf2/dw4-sig-types.exp: Fix typo.
 
 2012-07-27  Jan Kratochvil  <jan.kratochvil@redhat.com>
